No bug - Replace integer constructor with valueOf Fix sonar equals issue
Signed-off-by: Dawid Pakula <zulus@w3des.net>